# Assessment-Backend

./: .dockerignore  .env.example  .env.local.example  .env.production.example  .gitignore  Dockerfile  README.md  entrypoint.sh  manage.py  pyproject.toml  seed_meals.json
apps/core/: middleware.py  models.py
apps/meals/: admin.py  filters.py  models.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
apps/meals/management/commands/: __init__.py  seed_meals.py
apps/meals/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  local.py  production.py
