[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.7",
    "djangorestframework>=3.17.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "gunicorn>=23.0.0",
    "django-cors-headers>=4.9.0",
    "dj-database-url>=3.1.2",
    "whitenoise>=6.12.0",
]
